# core

./: .gitignore  Makefile  README.md
services/agentic/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  brief.md  pyproject.toml
services/agentic/app/: config.py  main.py
services/agentic/app/agents/: base.py  outfit_agent.py  wardrobe_agent.py
services/agentic/app/db/: base.py  session.py
services/agentic/app/infrastructure/: database.py  storage.py  vector.py
services/agentic/app/models/: __init__.py  base.py  clothing.py  daily_pick.py  follow.py  gallery.py  item.py  onboarding.py  outfit.py  outfit_item.py  outfit_like.py  outfit_suggestion.py  scraped_outfit.py  spotify.py  types.py  user.py
services/agentic/app/repositories/: clothing.py  outfit.py
services/agentic/app/schemas/: __init__.py  clothing.py  discover.py  gallery.py  home.py  onboarding.py  outfit.py  shuffle.py  social.py  spotify.py  user.py  wardrobe.py
services/agentic/app/services/: background_removal.py  crypto.py  embeddings.py  google_calendar.py  home_feed.py  jwt.py  mood.py  outfit_preview.py  outfit_scraper.py  shuffle.py  spotify.py  weather.py
services/agentic/app/utils/: image_storage.py  logging.py
services/agentic/app/workers/: outfit_scraper_sync.py  (+2 more)
services/agentic/docs/: F-01-background-removal.md  auth-me.md  avatar-upload-endpoint.md  gallery.md  onboarding.md  outfit-composer.md  shuffle-prefetch.md  shuffle.md  user-profile.md  wardrobe-upload-endpoint.md
services/agentic/tests/: test_background_removal.py  test_wardrobe_route.py
(+88 files in other folders)
